cabal-version:      2.4
name:               FizzBuzz
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Fizzbuzz

license:            Unlicense
author:             CastilloDel
maintainer:         delcastillodelarosadaniel@gmail.com

executable fizzbuzz
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
