cabal-version:      2.4
name:               FizzBuzz
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Fizzbuzz

license:            Unlicense
author:             CastilloDel
maintainer:         delcastillodelarosadaniel@gmail.com

library 
    exposed-modules:  
      FizzBuzz
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test
  type:               exitcode-stdio-1.0
  main-is:            FizzBuzzTest.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.14.3.0,
                      FizzBuzz,
                      base >=4.7 && <5,
                      hspec